# Messenger

./: CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt
Client/Header/: Client.h  IClient.h
Client/Source/: Client.cpp  IClient.cpp
Common/Header/: Buffer.h  CommunicationUnit.h  Connection.h  Core.h
Common/Source/: CommunicationUnit.cpp
Server/: CMakeLists.txt
Server/Header/: ClientUnit.h  IServer.h  Server.h
Server/Source/: ClientUnit.cpp  IServer.cpp  Server.cpp
